feat(amr): amr big modules implementations
